[project]
name = "pex"
dynamic = ["version", "readme", "dependencies", "optional-dependencies"]
description = "Proximal Exploration for Model-guided Protein Sequence Design"
authors = [{name = "Zhizhou Ren", email = "zhizhour@helixon.com"}]
classifiers=[
    "Development Status :: 3",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
]

[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.in"]}
optional-dependencies = {dev = {file = ["requirements-dev.in"]}}
readme = {file = "README.md"}

[tool.setuptools.packages.find]
include = ["pex*"]

[tool.setuptools_scm]
search_parent_directories = true
version_scheme = "no-guess-dev"
local_scheme = "node-and-date"
fallback_version = "0.0.0"
